# rust_rl

./: .gitignore  Cargo.toml  README.md  base_config.yaml  book.toml  ppo_config.yaml  rust-toolchain.toml  spo_config.yaml
docs/: architecture.md  configuration.md  onboarding.md  spo-training-loop.md  telemetry.md  training-loop.md  troubleshooting.md
src/: README.md  SUMMARY.md  backend.rs  config.rs  env.rs  env_model.rs  lib.rs  models.rs  telemetry.rs
src/algorithms/: README.md  mod.rs
src/algorithms/ppo/: README.md  buffer.rs  train.rs
src/algorithms/spo/: README.md  buffer.rs  loss.rs  mod.rs  search.rs  train.rs
src/common/: README.md  config.rs  mod.rs
src/common/model/: README.md  mod.rs  models.rs  observation_adapter.rs
src/common/runtime/: README.md  backend.rs  env.rs  evaluation.rs  mod.rs  telemetry.rs
src/common/utils/: README.md  buffer.rs  mod.rs  optimization.rs
src/docs/: architecture.md  configuration.md  introduction.md  onboarding.md  spo-training-loop.md  telemetry.md  training-loop.md  troubleshooting.md
src/ppo/: buffer.rs  loss.rs  mod.rs  train.rs
src/spo/: buffer.rs  loss.rs  search.rs  train.rs
templates/: FLASHBAX_JAX.txt  PPO_JAX.txt  SPO_JAX.txt
