[package]
name = "rust_rl"
version = "0.1.0"
edition = "2018"
rust-version = "1.89"
build = "build.rs"

[[bin]]
name = "ppo"
path = "src/bin/ppo.rs"

[[bin]]
name = "spo"
path = "src/bin/spo.rs"

[dependencies]
# --- PPO / infra ---
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.10"
bitvec = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
pyo3 = { version = "0.22", features = ["auto-initialize"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
bytemuck = "=1.25.0"


# rustpool as a library dependency
rustpool = { path = "../rustpool", package = "_rustpool", default-features = false }

# --- Burn (CUDA + autodiff) ---
burn = { version = "=0.20.1", features = ["cuda", "autodiff", "ndarray"] }
burn-ndarray = "=0.20.1"
cudarc = { version = "=0.18.2", default-features = false, features = ["std", "driver", "nvrtc", "dynamic-loading", "cuda-13000"] }

[patch.crates-io]
cubecl-cuda = { path = "vendor/cubecl-cuda-0.9.0" }
